fixed footer and background image, footer still broken on user account pages.

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -12,4 +12,9 @@ footer .fa-facebook {
 
 footer {
     margin-top: 1em;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
 }
